--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bootstrap",
-  "version": "0.26.4",
+  "version": "0.26.5-rob",
   "description": "Bootstrap 3 components build with React",
   "repository": {
     "type": "git",
@@ -40,7 +40,7 @@
   "author": "Stephen J. Collings <stevoland@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^0.13"
+    "react": "~0.13.3"
   },
   "devDependencies": {
     "babel": "^5.8.23",
